Adjusted colors and added RES override

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -15,6 +15,7 @@
 @import "components/link";
 @import "components/nav-buttons";
 @import "components/rank";
+@import "components/RES";
 @import "components/search";
 @import "components/side";
 @import "components/site-table";
