--- a/app/styles/components/_scaffolding.scss
+++ b/app/styles/components/_scaffolding.scss
@@ -1,7 +1,7 @@
 // Components :: Scaffolding
 
 body {
-  background-color: #f2f3f5;
+  background-color: #fff;
   font-family: "Helvetica Neue", "Helvetica", "Arial", "Sans-Serif";
   // font-size: 14px;
   // line-height: 1.5;
