--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,6 +10,7 @@
 // Components
 @import "components/scaffolding";
 @import "components/typography";
+@import "components/comments";
 @import "components/content";
 @import "components/entry";
 @import "components/link";
